# Games

./: .gitignore  CMakeLists.txt  README.md
Classes/: AppDelegate.cpp  AppDelegate.h
Classes/configs/loaders/: LevelConfigLoader.cpp  LevelConfigLoader.h
Classes/configs/models/: CardResConfig.cpp  CardResConfig.h  CardTypeDef.h  LevelConfig.h
Classes/controllers/: CardController.cpp  CardController.h  GameController.cpp  GameController.h
Classes/managers/: UndoManager.cpp  UndoManager.h
Classes/models/: CardModel.cpp  CardModel.h  GameModel.cpp  GameModel.h  UndoModel.cpp  UndoModel.h
Classes/services/: CardMatchService.cpp  CardMatchService.h  GameModelFromLevelGenerator.cpp  GameModelFromLevelGenerator.h
Classes/utils/: CardUtils.cpp  CardUtils.h
Classes/views/: CardView.cpp  CardView.h  GameView.cpp  GameView.h
Resources/data/: level_10.json  level_2.json  level_3.json  level_4.json  level_6.json  level_7.json  level_9.json
proj.linux/: main.cpp
proj.win32/: main.cpp
